tester_ft/log/compile_error_vec_23.txt
-VECTOR COPY RANGE CONSTRUCTOR TEST-

./tmp/outfile_vec_23.cpp:32:27: error: no member named 'begin' in 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                     ~~ ^
./tmp/outfile_vec_23.cpp:32:39: error: no member named 'end' in 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                                 ~~ ^
./tmp/outfile_vec_23.cpp:50:48: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1_r.begin(),v1_r.end(),v2_r.begin()))
                                                        ~~~~ ^
./tmp/outfile_vec_23.cpp:70:27: error: no member named 'begin' in 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                     ~~ ^
./tmp/outfile_vec_23.cpp:70:39: error: no member named 'end' in 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                                 ~~ ^
5 errors generated.
